--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -55,7 +55,7 @@ The `--env` argument is required.
 For more hands-on information on the above listed commands, please visit the [Deploy Your Project](/docs/how-to-guides/deployment/deploy-your-project) and [Destroy Cloud Infrastructure](/docs/how-to-guides/deployment/destroy-cloud-infrastructure) guides.
 :::
 
-### `yarn webiny output --env {env}`
+### `yarn webiny output {folder} --env {env}`
 
 Returns stack output for the specified project application and environment.
 
