--- a/docs/how-to-guides/webiny-applications/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
+++ b/docs/how-to-guides/webiny-applications/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
@@ -205,4 +205,4 @@ You can check the [plugin](https://github.com/webiny/webiny-js/blob/de23b3428e0e
 
 ## Learn more
 
-### Tutorial: [Create a Webiny Headless CMS address field plugin](/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin)
+### Tutorial: [Create a Webiny Headless CMS custom field plugin](/docs/tutorials/headless-cms/create-a-webiny-headless-cms-custom-field-plugin)
