docs: added a TOOD note and updated title

--- a/docs/tutorials/headless-cms/create-a-webiny-headless-cms-custom-field-plugin.mdx
+++ b/docs/tutorials/headless-cms/create-a-webiny-headless-cms-custom-field-plugin.mdx
@@ -1,9 +1,9 @@
 ---
 id: create-a-webiny-headless-cms-custom-field-plugin
-title: Create a Webiny Headless CMS custom field plugin
+title: Create a Webiny Headless CMS Custom Field Plugin
 sidebar_label: Custom Field Plugin
 keywords: ["webiny", "project", "install", "setup", "create"]
-description: Create a Webiny Headless CMS custom field plugin.
+description: Create a Webiny Headless CMS Custom Field Plugin.
 ---
 
 import CenteredImage from "@components/CenteredImage";
@@ -17,7 +17,7 @@ import encryptedText from "./assets/encrypted-text.gif";
 :::
 
 :::info
-The complete code of this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/).
+TODO: The complete code of this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/).
 :::
 
 ## Overview
