docs: removed the TODO text

--- a/docs/tutorials/headless-cms/create-a-webiny-headless-cms-custom-field-plugin.mdx
+++ b/docs/tutorials/headless-cms/create-a-webiny-headless-cms-custom-field-plugin.mdx
@@ -17,7 +17,7 @@ import encryptedText from "./assets/encrypted-text.gif";
 :::
 
 :::info
-TODO: The complete code of this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/headless-cms/custom-field-plugin).
+The complete code of this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/headless-cms/custom-field-plugin).
 :::
 
 ## Overview
