--- a/docs/release-notes/5.16.0/changelog.mdx
+++ b/docs/release-notes/5.16.0/changelog.mdx
@@ -8,6 +8,8 @@ description: See what's new in Webiny version 5.16.0.
 
 import CenteredImage from "@components/CenteredImage";
 import watchDeployPaneImprovement from "./changelog/watch-deploy-pane-improvement.png";
+import exportPageUI from "./changelog/export-page-demo.gif";
+import importPageUI from "./changelog/import-page-demo.gif";
 
 # Changes
 
@@ -19,38 +21,16 @@ Please check the [Webiny 5.16.0 migration guide](/docs/release-notes/5.16.0/upgr
 
 :::
 
-## Development
-
-### Pulumi CLI Is Now Downloaded Into Project Root's `.webiny` Folder ([#1947](https://github.com/webiny/webiny-js/pull/1947))
-
-To deploy necessary cloud infrastructure, by default, Webiny relies on [Pulumi](/docs/key-topics/deployment/iac-with-pulumi), a modern infrastructure as code framework.
-
-For every Webiny project, the framework is downloaded automatically, and, prior to this release, all of the related binaries would be downloaded into project's `node_modules/@webiny/pulumi-sdk/pulumi` folder. And although this works, over time, we've noticed a couple of interesting issues with this solution:
-
-- running the `yarn` command to reinstall project's dependencies would cause the downloaded binaries to be removed, making the user re-download the Pulumi CLI
-- while in runtime, Pulumi CLI can store sensitive files in this directory, which can create different deployment and security-related issues
-
-Because of these, from now on, all of the Pulumi CLI related binaries will be downloaded into the `.webiny/pulumi-cli` folder, located in your project root.
-
-:::note
-Once your project has been upgraded to `5.16.0`, upon running the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) or the [`webiny watch`](/docs/how-to-guides/use-watch-command) command, the Pulumi CLI will be re-downloaded. This is normal and will happen even if you already had the Pulumi CLI downloaded in the mentioned `node_modules/@webiny/pulumi-sdk/pulumi` folder.
-:::
-
-### Improved Webiny CLI ([#1946](https://github.com/webiny/webiny-js/pull/1946))
-
-Webiny CLI also received a couple of neat improvements.
-
-For starters, we've introduced the `--allow-production` flag for the [`webiny watch`](/docs/how-to-guides/use-watch-command) command, which allows the user to run the command even with `prod` and `production` environments (by default, the command doesn't allow that).
-
-Speaking of the [`webiny watch`](/docs/how-to-guides/use-watch-command) command, we've also made the logs displayed in the **Deploy** pane a bit cleaner and nicer:
-
-<CenteredImage alt='"webiny watch" Command - The Improved Deploy Pane' src={watchDeployPaneImprovement} style={{maxWidth: 750}}/>
-
-Finally, the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application/) scaffold should now work correctly on Windows operating system.
-
-###
-
 ## Page Builder
+
+### Export Import Page ([#1960](https://github.com/webiny/webiny-js/pull/1960))
+
+Now you can export pages created by the Page Builder editor. You can also choose whether to export the published or latest revision:
+
+<CenteredImage alt='Page Builder - export page demo' src={exportPageUI} style={{maxWidth: 750}}/>
+
+And, then you can import it (most likely in a different webiny project) by simply clicking the **Import Page** button and providing the exported file:
+<CenteredImage alt='Page Builder - export page demo' src={importPageUI} style={{maxWidth: 750}}/>
 
 ### Export Prerendering Plugins Separately ([#1954](https://github.com/webiny/webiny-js/pull/1954))
 
@@ -106,3 +86,33 @@ The following are the events we can subscribe to:
 - [`onPageAfterFlush`](https://github.com/webiny/webiny-js/blob/next/packages/api-page-builder/src/graphql/types.ts#L197)   - triggered before a page or multiple pages were flushed
 
 Note that rendering and flushing of pages is happening asynchronously. Meaning, the [`onPageAfterRender`](https://github.com/webiny/webiny-js/blob/next/packages/api-page-builder/src/graphql/types.ts#L195) and [`onPageAfterFlush`](https://github.com/webiny/webiny-js/blob/next/packages/api-page-builder/src/graphql/types.ts#L197) events will still be fired before the actual rendering and flushing happens.
+
+## Development
+
+### Pulumi CLI Is Now Downloaded Into Project Root's `.webiny` Folder ([#1947](https://github.com/webiny/webiny-js/pull/1947))
+
+To deploy necessary cloud infrastructure, by default, Webiny relies on [Pulumi](/docs/key-topics/deployment/iac-with-pulumi), a modern infrastructure as code framework.
+
+For every Webiny project, the framework is downloaded automatically, and, prior to this release, all of the related binaries would be downloaded into project's `node_modules/@webiny/pulumi-sdk/pulumi` folder. And although this works, over time, we've noticed a couple of interesting issues with this solution:
+
+- running the `yarn` command to reinstall project's dependencies would cause the downloaded binaries to be removed, making the user re-download the Pulumi CLI
+- while in runtime, Pulumi CLI can store sensitive files in this directory, which can create different deployment and security-related issues
+
+Because of these, from now on, all of the Pulumi CLI related binaries will be downloaded into the `.webiny/pulumi-cli` folder, located in your project root.
+
+:::note
+Once your project has been upgraded to `5.16.0`, upon running the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) or the [`webiny watch`](/docs/how-to-guides/use-watch-command) command, the Pulumi CLI will be re-downloaded. This is normal and will happen even if you already had the Pulumi CLI downloaded in the mentioned `node_modules/@webiny/pulumi-sdk/pulumi` folder.
+:::
+
+### Improved Webiny CLI ([#1946](https://github.com/webiny/webiny-js/pull/1946))
+
+Webiny CLI also received a couple of neat improvements.
+
+For starters, we've introduced the `--allow-production` flag for the [`webiny watch`](/docs/how-to-guides/use-watch-command) command, which allows the user to run the command even with `prod` and `production` environments (by default, the command doesn't allow that).
+
+Speaking of the [`webiny watch`](/docs/how-to-guides/use-watch-command) command, we've also made the logs displayed in the **Deploy** pane a bit cleaner and nicer:
+
+<CenteredImage alt='"webiny watch" Command - The Improved Deploy Pane' src={watchDeployPaneImprovement}
+               style={{maxWidth: 750}}/>
+
+Finally, the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application/) scaffold should now work correctly on Windows operating system.
