fix: apply minor tweaks

--- a/docs/release-notes/5.16.0/changelog.mdx
+++ b/docs/release-notes/5.16.0/changelog.mdx
@@ -23,14 +23,19 @@ Please check the [Webiny 5.16.0 migration guide](/docs/release-notes/5.16.0/upgr
 
 ## Page Builder
 
-### Export Import Page ([#1960](https://github.com/webiny/webiny-js/pull/1960))
+### Introducing Export and Import of Pages ([#1960](https://github.com/webiny/webiny-js/pull/1960))
 
-Now you can export pages created by the Page Builder editor. You can also choose whether to export the published or latest revision:
+With this new feature, you can easily export multiple pages created with the Page Builder application:
 
 <CenteredImage alt='Page Builder - export page demo' src={exportPageUI} style={{maxWidth: 750}}/>
 
-And, then you can import it (most likely in a different webiny project) by simply clicking the **Import Page** button and providing the exported file:
+Once completed, the exported pages can be imported in a different environment or even another Webiny project, by simply clicking on the **Import Page** button and providing the exported file:
+
 <CenteredImage alt='Page Builder - export page demo' src={importPageUI} style={{maxWidth: 750}}/>
+
+:::info
+To learn more about environments in general, check out the [Environments](/docs/key-topics/deployment/environments) key topic.
+:::
 
 ### Export Prerendering Plugins Separately ([#1954](https://github.com/webiny/webiny-js/pull/1954))
 
