feat(release-notes): upgrade script

--- a/docs/release-notes/5.16.0/changelog.mdx
+++ b/docs/release-notes/5.16.0/changelog.mdx
@@ -21,6 +21,22 @@ Please check the [Webiny 5.16.0 migration guide](/docs/release-notes/5.16.0/upgr
 
 :::
 
+## Upgrade Command
+
+With this version the `yarn webiny upgrade` has changed a bit.
+Basically, we create new files for the system. For a bit more explanation, please read further.
+
+### How Was It Done Before This Version?
+When you ran the `upgrade` command in the previous versions we would add new code, and remove the unnecessary one, in the `api` or `apps` folders via [ts-morph](https://www.npmjs.com/package/ts-morph) package.
+It was a lengthy process to create those upgrade scripts, so we decided to go a bit faster way.
+
+### How Will It Be Done From This Version?
+Starting with this version, we will create a backup of the existing folders and files and create new folders and files in their place.
+We will only backup the files and folders that are being changed in some way. In most cases, it will be file changes only. And in some extreme cases, we will swap out whole folders.
+
+Note that when the upgrade is complete, you will need to transfer your custom code from the backedup files to new ones.
+
+
 ## Page Builder
 
 ### Introducing Export and Import of Pages ([#1960](https://github.com/webiny/webiny-js/pull/1960))
