--- a/docs/release-notes/5.16.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.16.0/upgrade-guide.mdx
@@ -42,6 +42,8 @@ The next step is to run the project upgrade:
 yarn webiny upgrade
 ```
 
+Please note that, starting in 5.16.0, our upgrade command is changed. Please read about it in our [changelog](/docs/release-notes/5.16.0/changelog).
+
 Once the upgrade command has finished, you can run the [`git status`](https://git-scm.com/docs/git-status) command to see all changes that the command performed.
 
 ## 3. Deploy Your Project
