fix: improve wording

--- a/docs/tutorials/headless-cms/create-a-webiny-headless-cms-custom-field-plugin.mdx
+++ b/docs/tutorials/headless-cms/create-a-webiny-headless-cms-custom-field-plugin.mdx
@@ -12,8 +12,9 @@ import fieldRendered from "./assets/field-renderer.png";
 import encryptedText from "./assets/encrypted-text.gif";
 
 :::tip What you'll learn
-* how to create a new content model field plugin
-* how a plugin stores and retrieves data
+
+- how to create a new content model field plugin
+- how a plugin stores and retrieves data
 :::
 
 :::info
@@ -22,68 +23,68 @@ The complete code of this tutorial can also be found in our [GitHub examples rep
 
 ## Overview
 
-Webiny offers a predefined set of content model fields in Headless CMS. Along with this, you can also create your custom Headless CMS fields.
-In this tutorial, we will learn the anatomy of CMS fields and, as an example, will create a custom field plugin to store encrypted data in the database and decrypt it while retrieving the data.
+Webiny Headless CMS comes with a predefined set of content model fields. But, you can also create your own custom fields, to expand the built-in functionality. In this tutorial, we'll learn the anatomy of a Headless CMS field, and, as an example, create a custom field plugin to store encrypted data into the database, and decrypt it after retrieving it from the database.
 
 ## Plugins
+
 Plugins are a vital part of Webiny, and the majority of Webiny's functionality lives in plugins. You can learn more about plugins [here](/docs/key-topics/plugins).
 
-We will create our custom field with the help of plugins. Plugins will construct every part of the custom field i.e. we will create a plugin to list our new field in the field menu, another plugin to render the field, another one to store and retrieve data.
+We will create our custom field with the help of plugins. Plugins will construct every part of the custom field i.e. we will create a plugin to list our new field in the fields list, another plugin to render the field, another one to store and retrieve data.
 
-Webiny has five plugins types to create a custom CMS field.
-Out of these, three are mandatory, and two are optional.
-Let's briefly discuss these plugins types in this section, and in the further sections, we will see them in action.
+Webiny has five plugin types to create a custom CMS field. Out of these, three are mandatory, and two are optional.
+Let's briefly discuss these plugin types in this section, and in the further sections, we will see them in action.
 
-1. **CmsEditorFieldTypePlugin** - It is used to define the field definition and is responsible for showing the field in the field menu on UI.
+1. **CmsEditorFieldTypePlugin** is used to define the field and is responsible for showing the field in the fields list, within the content model editor UI.
 
-2. **CmsEditorFieldRendererPlugin** - It is responsible for the rendering part of the field, i.e. how the field will be rendered on create/update entry form is defined using the CmsEditorFieldRendererPlugin type.
+2. **CmsEditorFieldRendererPlugin** is responsible for rendering of the field in the content entry form (when you're creating the actual content).
 
-3. **CmsModelFieldToGraphQLPlugin** - This plugin type is used to define the GraphQL part of the field.  
+3. **CmsModelFieldToGraphQLPlugin** is used to define the field in the GraphQL API. It is responsible for defining field's schema types, inputs, resolvers, etc.
 
-   These three mentioned plugins types are mandatory to create a custom field, and the next two are optional.
+   The three plugin types we covered above are **mandatory** to create a custom field, and the following two are **optional**.
 
-4. **CmsModelFieldToStoragePlugin** - These plugin types handle the storage transformations, i.e. you can modify the data before storing it in storage and also manipulate it while retrieving it.  
-In this tutorial, as mentioned, we will store the encrypted data, and while retrieving, we will decrypt it. For these transformations, we will use this plugin type further in our tutorial.
+4. **CmsModelFieldToStoragePlugin** handles storage transformations, i.e. you can modify the data before passing it to your storage layer, and also manipulate it after retrieval. In this tutorial, we will encrypt and decrypt our field data using this plugin type.
 
-5. **CmsModelFieldToElasticSearchPlugin** - Plugins of this type define transformations to run on a field with Elasticsearch interaction i.e. you can execute the transformations while storing the data and retrieving it from Elasticsearch.
+5. **CmsModelFieldToElasticSearchPlugin** defines transformations to run on a field with Elasticsearch interaction i.e. you can execute the transformations before and after you interact with the Elasticsearch index. Often, data stored to Elasticsearch is not stored in its original form, and requires some preparation to be properly indexed, or even excluded from indexing. This plugin gives you full control over how you store and retrieve data to, and from Elasticsearch.
+
+___
 
 Now, let's start building our custom field and see these plugins in action.
-We will name the new custom field as `Secret Text`, as we are storing the encrypted text in the database.
+We will name the new custom field `Secret Text`, as we'll be storing the text value as an encrypted string.
 
 ### Field Type Plugin
 
-We will start with creating field type plugin (`CmsEditorFieldTypePlugin`) to define the field's definition and to show it on the field menu on UI.
+We will start by creating a field type plugin (`CmsEditorFieldTypePlugin`) to define the field and to show it in the field list in the content model editor.
 
 1. Create `fields/secretText` directory in `apps/admin/code/src/plugins/headlessCMS`.
-2. Create a file `secretTextFieldPlugin.tsx` in newly created directory.
+2. Create a file `secretTextFieldPlugin.tsx` in the newly created directory.
 
 ```tsx title="apps/admin/code/src/plugins/headlessCMS/fields/secretText/secretTextFieldPlugin.tsx"
 import React from "react";
 import { CmsEditorFieldTypePlugin } from "@webiny/app-headless-cms/types";
 
-const TextIcon: React.FunctionComponent = () => (<i>icon</i>);
+const TextIcon: React.FunctionComponent = () => <i>icon</i>;
 
-export default(): CmsEditorFieldTypePlugin => ({
-    type: "cms-editor-field-type",
-    name: "cms-editor-field-type-secret-text",
-    field: {
+export default (): CmsEditorFieldTypePlugin => ({
+  type: "cms-editor-field-type",
+  name: "cms-editor-field-type-secret-text",
+  field: {
+    type: "secret-text",
+    label: "Secret Text",
+    description: "Store encrypted text into the database.",
+    icon: <TextIcon />,
+    allowMultipleValues: false,
+    allowPredefinedValues: false,
+    multipleValuesLabel: "Use as a list of text values",
+    createField() {
+      return {
         type: "secret-text",
-        label: "Secret Text",
-        description: "The encrypted text will be stored in the database.",
-        icon: <TextIcon />,
-        allowMultipleValues: false,
-        allowPredefinedValues: false,
-        multipleValuesLabel: "Use as list of text",
-        createField() {
-            return {
-                type: "secret-text",
-                validation: [],
-                renderer: {
-                    name: ""
-                }
-            };
+        validation: [],
+        renderer: {
+          name: ""
         }
+      };
     }
+  }
 });
 ```
 
@@ -107,19 +108,21 @@ export default [
 ```
 
 4. Run the `watch` command to start a new watch session on `apps/admin` application code.
+
 ```
 yarn webiny watch apps/admin --env dev
-```  
+```
+
 This command will build our application and will serve the admin app locally. It will also detect all changes in `apps/admin` and live rebuild the application.
 You can learn more on `watch` command [here](/docs/how-to-guides/use-watch-command/).
 
 As a result, our new field should be shown in field menu:
+
 <CenteredImage src={fieldDefinition} alt="Field Definition" />
 
 ### Field Renderer Plugin
-As a next step, we will define the renderer for the `secret text` field.
-It will define how this field will be rendered on create/update entry form.  
-We will create a field renderer plugin (`CmsEditorFieldRendererPlugin`) for the `secret text` field.
+
+As our next step, we'll define a renderer for our new field. The renderer determines how this field will be rendered in the content entry form, when you create/update your data. We'll be using the `CmsEditorFieldRendererPlugin` plugin type.
 
 1. Create a file `secretTextFieldRendererPlugin.tsx` in `apps/admin/code/src/plugins/headlessCMS/fields/secretText` directory.
 
@@ -128,33 +131,33 @@ import React from "react";
 import { CmsEditorFieldRendererPlugin } from "@webiny/app-headless-cms/types";
 import { Input } from "@webiny/ui/Input";
 
-export default(): CmsEditorFieldRendererPlugin => ({
-    type: "cms-editor-field-renderer",
-    name: "cms-editor-field-renderer-secret-text",
-    renderer: {
-        rendererName: "secret-text",
-        name: `Secret Text`,
-        description: `Enter the text to encrypt`,
-        canUse({ field }) {
-            return field.type === "secret-text";
-        },
-        render({ field, getBind }) {
-            const Bind = getBind();
+export default (): CmsEditorFieldRendererPlugin => ({
+  type: "cms-editor-field-renderer",
+  name: "cms-editor-field-renderer-secret-text",
+  renderer: {
+    rendererName: "secret-text",
+    name: `Secret Text`,
+    description: `Enter the text to encrypt`,
+    canUse({ field }) {
+      return field.type === "secret-text";
+    },
+    render({ field, getBind }) {
+      const Bind = getBind();
 
-            return (
-                <Bind>
-                    {bind => (
-                        <Input
-                            {...bind}
-                            label={field.label}
-                            placeholder={field.placeholderText}
-                            description={field.helpText}
-                        />
-                    )}
-                </Bind>
-            );
-        }
+      return (
+        <Bind>
+          {bind => (
+            <Input
+              {...bind}
+              label={field.label}
+              placeholder={field.placeholderText}
+              description={field.helpText}
+            />
+          )}
+        </Bind>
+      );
     }
+  }
 });
 ```
 
@@ -179,8 +182,8 @@ export default [
 ```
 
 4. As the watch command is already running on `apps/admin`, we should see these changes immediately.
-Drag and drop the `secret text` field to create a model and navigate to the `PREVIEW` tab; you should see an input field here:
-<CenteredImage src={fieldRendered} alt="Field Rendered" />
+   Drag and drop the `secret text` field to create a model and navigate to the `PREVIEW` tab; you should see an input field here:
+   <CenteredImage src={fieldRendered} alt="Field Rendered" />
 
 Cool, so far, we are done with the UI part of the custom field. In the next step, we will handle the GraphQL part by creating a Field to GraphQL plugin (`CmsModelFieldToGraphQLPlugin`) for the `secret text` field.
 
@@ -188,11 +191,12 @@ Cool, so far, we are done with the UI part of the custom field. In the next step
 
 1. Create `fields/secretText` directory in `api/code/headlessCMS/src`.
 2. Create a file `secretTextFieldPlugin.ts` in newly created directory.
+
 ```ts title="api/code/headlessCMS/src/fields/secretText/secretTextFieldPlugin.ts"
 import { CmsModelFieldToGraphQLPlugin } from "@webiny/api-headless-cms/types";
 
 const createListFilters = ({ field }) => {
-    return `
+  return `
         ${field.fieldId}: String
         ${field.fieldId}_not: String
         ${field.fieldId}_in: [String]
@@ -203,33 +207,34 @@ const createListFilters = ({ field }) => {
 };
 
 const plugin: CmsModelFieldToGraphQLPlugin = {
-    name: "cms-model-field-to-graphql-secret-text",
-    type: "cms-model-field-to-graphql",
-    fieldType: "secret-text",
-    isSortable: true,
-    isSearchable: true,
-    read: {
-        createTypeField({ field }) {
-            return `${field.fieldId}: String`;
-        },
-        createGetFilters({ field }) {
-            return `${field.fieldId}: String`;
-        },
-        createListFilters
+  name: "cms-model-field-to-graphql-secret-text",
+  type: "cms-model-field-to-graphql",
+  fieldType: "secret-text",
+  isSortable: true,
+  isSearchable: true,
+  read: {
+    createTypeField({ field }) {
+      return `${field.fieldId}: String`;
     },
-    manage: {
-        createListFilters,
-        createTypeField({ field }) {
-            return `${field.fieldId}: String`;
-        },
-        createInputField({ field }) {
-            return field.fieldId + ": String";
-        }
+    createGetFilters({ field }) {
+      return `${field.fieldId}: String`;
+    },
+    createListFilters
+  },
+  manage: {
+    createListFilters,
+    createTypeField({ field }) {
+      return `${field.fieldId}: String`;
+    },
+    createInputField({ field }) {
+      return field.fieldId + ": String";
     }
+  }
 };
 
 export default plugin;
 ```
+
 3. Import this new plugin in `api/code/headlessCMS/src/index.ts`.
 
 ```ts title="api/code/headlessCMS/src/index.ts" {5,12}
@@ -253,21 +258,20 @@ export const handler = createHandler({
 
 ```
 yarn webiny watch api/code/headlessCMS --env dev
-```  
+```
 
-Super, we are all set to use our new field in the CMS model. At this stage, our custom field will behave like a normal text. 
-In this second part of this tutorial, we will encrypt the data before storing it in the database and decrypt it while retrieving it.
+Super, we are all set to use our new field in the CMS model. At this stage, our custom field will behave like a normal text.
+In the second part of this tutorial, we will encrypt the data before storing it into the database and decrypt it while retrieving it.
 
 :::info
-As mentioned earlier, the three plugins we have created so far are mandatory for creating a custom field. The plugins discussed in the next section are optional and can be used based on your requirements.
+As mentioned earlier, the three plugins we've created so far are mandatory for creating a custom field. The plugins discussed in the next section are optional, and can be used based on your requirements.
 :::
 
-## Storage transformations
+## Storage Transformations
 
-Field to Storage Plugin (`CmsModelFieldToStoragePlugin`) is used to manipulate the data before storing it in storage and also to modify data while retrieving it.  
-In our case, we will encrypt the data before storing it in the database and decrypt it while retrieving it. 
+`CmsModelFieldToStoragePlugin` is used to manipulate the data before passing it to the storage layer, and also to modify data while retrieving it. In our case, we will _encrypt_ the data before storing it, and _decrypt_ it after retrieval.
 
-For encryption and decryption, we will use the [`cryptr`](https://www.npmjs.com/package/cryptr) package. 
+For encryption and decryption, we will use the [`cryptr`](https://www.npmjs.com/package/cryptr) package.
 So let's first add this package to our application.
 
 1. Add `"cryptr": "^6.0.2"` in `api/code/headlessCMS/package.json` file.
@@ -277,23 +281,24 @@ Now, let's proceed to create a field to storage plugin (`CmsModelFieldToStorageP
 
 As a first step, we will encrypt data before storing it in the database.  
 Create a file `secretTextFieldStoragePlugin.ts` in `api/code/headlessCMS/src/fields/secretText` directory.
+
 ```ts title="api/code/headlessCMS/src/fields/secretText/secretTextFieldStoragePlugin.ts"
 import { CmsModelFieldToStoragePlugin } from "@webiny/api-headless-cms/types";
-import cryptr from 'cryptr';
+import cryptr from "cryptr";
 
 export default (): CmsModelFieldToStoragePlugin<String> => ({
-    type: "cms-model-field-to-storage",
-    name: "cms-model-field-to-storage-address",
-    fieldType: "secret-text",
-    async toStorage({ value }) {
-        const encryptText = new cryptr('myTotalySecretKey').encrypt(value)
-        return {
-            value: encryptText
-        };
-    },
-    async fromStorage({ value }) {
-        return value.value
-    }
+  type: "cms-model-field-to-storage",
+  name: "cms-model-field-to-storage-address",
+  fieldType: "secret-text",
+  async toStorage({ value }) {
+    const encryptText = new cryptr("myTotallySecretKey").encrypt(value);
+    return {
+      value: encryptText
+    };
+  },
+  async fromStorage({ value }) {
+    return value.value;
+  }
 });
 ```
 
@@ -318,34 +323,36 @@ export const handler = createHandler({
 ```
 
 Now, let's create a content entry with our new field.
+
 <CenteredImage src={encryptedText} alt="Encrypted Text" />
 
-As you create the entry, you will see your data is encrypted because, as per our current code, we encrypted our data while storing, but while retrieving, we are not decrypting it.
+As you create the entry, you will see your data is encrypted, because, as per our current code, we encrypt our data before storing it, but we're not decrypting it back after retrieving from the database.
 
-In the next step, let's decrypt the data while retrieving it.
+In the next step, let's decrypt the data after we retrieve it.
 
 1. Open the `api/code/headlessCMS/src/fields/secretText/secretTextFieldStoragePlugin.ts` file.
-2. Update the `return` statement of `fromStorage` function with this:   
-`return new cryptr('myTotalySecretKey').decrypt(value.value)`
+2. Update the `return` statement of `fromStorage` function with this:  
+   `return new cryptr('myTotallySecretKey').decrypt(value.value)`
 
 ```ts title="api/code/headlessCMS/src/fields/secretText/secretTextFieldStoragePlugin.ts" {5}
 export default (): CmsModelFieldToStoragePlugin<String> => ({
     (...)
-    
+
     async fromStorage({ value }) {
-        return new cryptr('myTotalySecretKey').decrypt(value.value)
+        return new cryptr('myTotallySecretKey').decrypt(value.value)
     }
-    
+
     (...)
 });
 ```
-With this change, while retrieving data, it will be decrypted.
 
-Congratulation, you have created your first custom field for Headless CMS!
+With this change, after retrieving the data, it will be decrypted.
+
+Congratulations! You have created your first custom field for Webiny Headless CMS!
 
 ## Extras!!
 
 As discussed earlier, another optional plugin type is `CmsModelFieldToElasticsearchPlugin`.  
-It is similar to the storage plugin but works with Elasticsearch, so you can do the transformations while storing the data in index and while retrieving it. [Here](https://github.com/webiny/webiny-js/blob/731966ba13e6d9c5c82828a89e0e9ef7d4a0a27d/packages/api-headless-cms-ddb-es/src/elasticsearch/indexing/numberIndexing.ts) is an example of Field to Elasticsearch Plugin.  
+It is similar to the storage plugin, but works with Elasticsearch, so you can do the transformations before storing the data into the index, and after retrieving it. [Here](https://github.com/webiny/webiny-js/blob/731966ba13e6d9c5c82828a89e0e9ef7d4a0a27d/packages/api-headless-cms-ddb-es/src/elasticsearch/indexing/numberIndexing.ts) is an example of Field to Elasticsearch Plugin.
 
 For primitive data types fields, `isSearchable: true` flag will do the work for you for indexing. But if you have a complex field or want to store your field in a certain special way, you can create a plugin of `CmsModelFieldToElasticsearchPlugin` type.
