feat(release-notes): 5.16.0 form builder docs

--- a/docs/release-notes/5.16.0/changelog.mdx
+++ b/docs/release-notes/5.16.0/changelog.mdx
@@ -108,6 +108,14 @@ The following are the events we can subscribe to:
 
 Note that rendering and flushing of pages is happening asynchronously. Meaning, the [`onPageAfterRender`](https://github.com/webiny/webiny-js/blob/next/packages/api-page-builder/src/graphql/types.ts#L195) and [`onPageAfterFlush`](https://github.com/webiny/webiny-js/blob/next/packages/api-page-builder/src/graphql/types.ts#L197) events will still be fired before the actual rendering and flushing happens.
 
+## Form Builder
+
+### Changes In The GraphQL Schema
+
+We changed the `listFormSubmissions` query to accept `[FbSubmissionSort!]` instead of `FbSubmissionSortInput`. This change was done to match our other API packages GraphQL schemas.
+If you had some custom code with a query call to list the form submissions, be sure to change it accordingly.
+Available options to send are `createdOn_ASC`, `createdOn_DESC`, `savedOn_ASC` and `savedOn_DESC`. The default sort is `createdOn_ASC`.
+
 ## Development
 
 ### Pulumi CLI Is Now Downloaded Into Project Root's `.webiny` Folder ([#1947](https://github.com/webiny/webiny-js/pull/1947))
