fix: polish Upgrade Command section

--- a/docs/release-notes/5.16.0/changelog.mdx
+++ b/docs/release-notes/5.16.0/changelog.mdx
@@ -130,17 +130,16 @@ Speaking of the [`webiny watch`](/docs/how-to-guides/use-watch-command) command,
 
 Finally, the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application/) scaffold should now work correctly on Windows operating system.
 
-### Upgrade Command
+### Changes In the Way We Approach Project Upgrades
 
-With this version the `webiny upgrade` has changed a bit. Basically, we create new files for the system. For a bit more explanation, please read further.
+With this release, we've decided to change the way we approach project upgrades.
 
 #### How Was It Done Before This Version?
 
-Prior to this release, upon running the `webiny upgrade`, the command would directly modify your project's code, most often within the `api` or `apps` folders. The problem with this approach is that it is complex and lengthy, so we needed to start looking for an alternative.
+Prior to this release, upon running the `webiny upgrade`, the command would directly modify your project's code, most often within the `api` or `apps` folders. But, ultimately, the problem with this approach is that it is just too complex and lengthy, so we needed to start looking for an alternative.
 
 #### How Will It Be Done From This Version?
 
-Starting with this version, we will create a backup of the existing folders and files and create new folders and files in their place.
-We will only backup the files and folders that are being changed in some way. In most cases, it will be file changes only.
+Starting with this version, upon running the same `webiny upgrade` command, we will create a backup of the existing folders and files and create new folders and files in their place. We will only backup the files and folders that are being changed in some way. In most cases, it will be file changes only.
 
-Note that when the upgrade is complete, you will need to transfer your custom code from the backed up files to the new ones.
+When the upgrade is complete, as a final step, you will need to transfer your custom code from the backed up files to the new ones.
