--- a/docs/release-notes/5.16.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.16.0/upgrade-guide.mdx
@@ -42,7 +42,9 @@ The next step is to run the project upgrade:
 yarn webiny upgrade
 ```
 
-Please note that, starting in 5.16.0, our upgrade command is changed. Please read about it in our [changelog](/docs/release-notes/5.16.0/changelog).
+:::note
+Starting from this release, we've decided to slightly change the way we approach project upgrades. For more information, please check out the [changelog](/docs/release-notes/5.16.0/changelog#changes-in-the-way-we-approach-project-upgrades).
+:::
 
 Once the upgrade command has finished, you can run the [`git status`](https://git-scm.com/docs/git-status) command to see all changes that the command performed.
 
