docs: added the missing comma

--- a/docs/tutorials/headless-cms/create-a-webiny-headless-cms-custom-field-plugin.mdx
+++ b/docs/tutorials/headless-cms/create-a-webiny-headless-cms-custom-field-plugin.mdx
@@ -330,7 +330,7 @@ Now, let's create a content entry with our new field.
 
 <CenteredImage src={encryptedText} alt="Encrypted Text" />
 
-As we can see in the video above when you create the entry and save it, you will see encrypted data in the input text field because, as per our current code, we encrypt our data before storing it, but we're not decrypting it back after retrieving from the database.
+As we can see in the video above, when you create the entry and save it, you will see encrypted data in the input text field because, as per our current code, we encrypt our data before storing it, but we're not decrypting it back after retrieving from the database.
 
 In the next step, let's decrypt the data after we retrieve it.
 
