--- a/docs/how-to-guides/use-watch-command.mdx
+++ b/docs/how-to-guides/use-watch-command.mdx
@@ -1,7 +1,7 @@
 ---
 id: use-watch-command
-title: Use the Watch Command
-sidebar_label: Use the Watch Command
+title: Watch Command
+sidebar_label: Watch Command
 keywords: ["webiny", "watch", "command", "development"]
 description: Learn how to continuously rebuild and redeploy your code using the "webiny watch" command.
 ---
