--- a/docs/tutorials/webiny-cli/adding-custom-commands.mdx
+++ b/docs/tutorials/webiny-cli/adding-custom-commands.mdx
@@ -1,7 +1,7 @@
 ---
 id: adding-custom-commands
-title: Adding Custom Commands
-sidebar_label: Adding Custom Commands
+title: Adding Custom CLI Commands
+sidebar_label: Custom CLI Commands
 keywords: ["webiny", "cli", "custom", "commands"]
 description: Learn how to add custom commands to the Webiny CLI.
 ---
