--- a/docs/webiny-overview/serverless-cms/apps/file-manager.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/file-manager.mdx
@@ -1,7 +1,7 @@
 ---
 id: file-manager
 title: File Manager
-sidebar_label: File Manager
+sidebar_label: Introduction
 keywords: ["serverless", "performance", "benchmark", "headless cms", "graphql"]
 description: Learn about the Webiny File Manager features.
 ---
