--- a/docs/webiny-overview/serverless-cms/apps/headless-cms.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/headless-cms.mdx
@@ -1,7 +1,7 @@
 ---
 id: headless-cms
 title: Headless CMS
-sidebar_label: Headless CMS
+sidebar_label: Introduction
 keywords: ["headless cms", "graphql", "serverless cms", "open-source"]
 description: Webiny Serverless CMS Intro
 ---
