--- a/docs/webiny-overview/serverless-cms/apps/intro.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/intro.mdx
@@ -1,7 +1,7 @@
 ---
 id: intro
-title: Intro
-sidebar_label: Intro
+title: Serverless CMS
+sidebar_label: Serverless CMS
 keywords: ["serverless", "cms", "headless cms", "graphql"]
 description: Webiny Serverless CMS Intro
 ---
